changed secondary color

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,7 +2,7 @@
   --head-font: font-family: 'PT Serif', serif;
 --main-font: font-family: 'Montserrat', sans-serif;
 --accent-color: #FFCE00;
---secondary-color:#00BE99;
+--secondary-color:#E7788C;
 --header-color:#242424;
 }
 
