--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,7 +15,7 @@
 }
 .nav-link {
     color: white;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -25,7 +25,7 @@ text-decoration: underline;
 }
 .navbar-brand {
     color: black;
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 700;
     margin: 10px;
     background-color: var(--accent-color);
@@ -46,7 +46,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
+  width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
   height: 90vh;
   flex-wrap: wrap;
@@ -54,17 +55,15 @@ body {
 
 .social-media {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  font-size: 34px;
+  font-size: 22px;
   gap: 15px;
 }
 
 .social-media a{
     color: black;
     border-radius: 8px;
-    width: 50px;
-    height: 50x;
+    width: 30px;
     text-align: center;
     background-color: var(--accent-color);
 }
@@ -74,19 +73,19 @@ background-color: var(--secondary-color);
 }
 
 .introduction p {
-  font-size: 36px;
+  font-size: 28px;
   font-family: var(--head-font);
   font-weight: bold;
 }
 
 h1 {
-  font-size: 98px;
+  font-size: 76px;
   font-family: var(--head-font);
   font-weight: 900;
   color: var(--accent-color);
 }
 h2 {
-  font-size: 36px;
+  font-size: 28px;
   font-family: var(--head-font);
   font-weight: bold;
   
@@ -94,11 +93,11 @@ h2 {
 .button {
     display: block;
     background-color: var(--accent-color);
-    padding: 20px;
-    font-size: 28px;
+    padding: 15px;
+    font-size: 20px;
     font-family: var(--main-font);
     font-weight: 700;
-    margin-top: 30px;
+    margin-top: 25px;
     border: none;
     border-radius: 8px;
     box-shadow: 0px 0px 20px 10px rgba(255, 206, 0, 0.3);
@@ -108,5 +107,5 @@ h2 {
     box-shadow: 0px 0px 20px 10px rgba(0, 190, 153, 0.3);
 }
 .main-img {
-    width: 500px;
+    width: 350px;
 }
