--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -182,6 +182,14 @@ h2 {
   width: 400px;
 }
 
+.skills li {
+  padding: 0;
+  list-style-type: none;
+  display: inline;
+  font-size: 72px;
+  color: var(--secondary-color);
+}
+
 @media (max-width:767px) {
   h1 {
     font-size: 56px;
