--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -164,6 +164,10 @@ h2 {
   margin: 20px auto;
 }
 
+.email-btn {
+  font-size: 22px;
+}
+
 .view-button a {
   color: black;
   text-decoration: none;
