--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -164,10 +164,6 @@ h2 {
   margin: 20px auto;
 }
 
-.email-btn {
-  font-size: 22px;
-}
-
 .view-button a {
   color: black;
   text-decoration: none;
@@ -223,6 +219,16 @@ h2 {
 .center-btn {
   display: block;
   margin: 25px auto;
+}
+
+.contact-pic {
+  width: 500px;
+  height: 250px;
+}
+
+.contact-img {
+  display: block;
+  margin: 30px auto;
 }
 
 @media (max-width:767px) {
