--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,7 +14,8 @@
   justify-content: space-evenly;
 }
 
-.navbar {
+.navbar,
+.footer-cont {
   background-color: var(--header-color);
   font-family: var(--main-font);
 }
@@ -78,6 +79,13 @@ ul {
   flex-wrap: wrap;
 }
 
+.footer-cont {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  justify-content: center;
+}
+
 .social-media {
   display: flex;
   flex-direction: column;
@@ -135,7 +143,8 @@ h2 {
 }
 
 .view-button,
-.button {
+.button,
+.contact-button {
   display: block;
   background-color: var(--accent-color);
   font-family: var(--main-font);
@@ -152,9 +161,16 @@ h2 {
 }
 
 .button:hover,
-.view-button:hover {
+.view-button:hover,
+.contact-button:hover {
   background-color: var(--secondary-color);
   box-shadow: 0px 0px 20px 10px rgba(0, 190, 153, 0.3);
+}
+
+.contact-button {
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .view-button {
@@ -164,7 +180,8 @@ h2 {
   margin: 20px auto;
 }
 
-.view-button a {
+.view-button a,
+.contact-button a {
   color: black;
   text-decoration: none;
 }
@@ -192,6 +209,13 @@ h2 {
   padding: 10px;
   font-family: var(--main-font);
   font-weight: bold;
+}
+
+.footer-cont h4,
+.footer-cont p {
+  font-family: var(--main-font);
+  font-weight: bold;
+  text-align: center;
 }
 
 .project-img {
