--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,15 +97,31 @@ ul {
   align-self: flex-start;
 }
 
-.social-media a {
+.social-media-big {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  gap: 25px;
+}
+
+.social-media a,
+.social-media-big a {
   color: black;
   border-radius: 8px;
-  width: 30px;
   text-align: center;
   background-color: var(--accent-color);
 }
 
-.social-media a:hover {
+.social-media a {
+  width: 30px;
+}
+
+.social-media-big a {
+  width: 70px;
+}
+
+.social-media a:hover,
+.social-media-big a:hover {
   background-color: var(--secondary-color);
 }
 
@@ -214,8 +230,9 @@ h2 {
 .footer-cont h4,
 .footer-cont p {
   font-family: var(--main-font);
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
+  font-size: 20px;
 }
 
 .project-img {
@@ -246,13 +263,12 @@ h2 {
 }
 
 .contact-pic {
-  width: 500px;
-  height: 250px;
+  width: 100%;
 }
 
 .contact-img {
   display: block;
-  margin: 30px auto;
+  margin: 35px auto;
 }
 
 @media (max-width:767px) {
